fix(theme): fix z-index for layout header

--- a/src/framework/theme/components/layout/layout.component.scss
+++ b/src/framework/theme/components/layout/layout.component.scss
@@ -25,7 +25,7 @@
       position: fixed;
       left: 0;
       right: 0;
-      z-index: 1000;
+      z-index: 10000;
     }
   }
 
